     used for this effort.
   - Dropped different unneeded defines in IOVersion.h
   - Dropped clean_ctlm.c, because we can use the recode tool instead.
   - Merged rdtsc.c into IOTime.cpp
   - Cleaned up some compiler warnings on Solaris
   - Changes NO_LINUX_VI to NO_DYNAMO_VI so Solaris build can use it also
   - Dropped the IOCq.cpp file, because it was empty.
- Others:
   - Made some minor changes to get Iometer to compile with VC++ 7 (.NET)
     Note: No MSVC++ project files have been checked in, you will have to let
           VC++ convert the project for you.  This worked for fine for me.
   - Added the Wizard.mdb file from the old days (version 1999.10.20).
   - rewrote the Solaris Makefile to match the Linux stuff
   - Added the output of the major and minor number during the detection of
     the sector size (of physical disks).
   - Rewrite of the .../README file (containing additions for the Iometer
     User's Guide as well as text for a future Developers Guide).



ChangeLog (2003.02.15):
=======================

- Applied patches:
   - iometer.patch by Matt D. Robinson (ensures, that there is an allocated
     buffer for each worker thread - needed for large amounts of I/O through
     ServerWorks chipsets).
- Bugfixes:
   - Different changes to get Dynamo compiled with gcc 3.2 - in the past there
     was some problem known as cout << hex error (include <sstream> instead of
     include <strstream.h> etc).
   - Modified the sector size detection for physical disks under Linux in that
     way, that major and minor number are recognised (was the major number
     only).
   - Added CPU time in user mode with low priority (nice) to the user mode
     utilization as well as the total CPU utilization.
- Cleanup:
   - Dropped the IOMessage.cpp and IOTest.cpp file, because they are empty.
- Others:
   - Under Linux, NFS devices are now supported by default (in older versions
     they was excluded per default).



ChangeLog (2003.02.08):