@@ -33,7 +33,12 @@ ChangeLog (2003.nn.nn):
    - Cleaned up some compiler warnings on Solaris
    - Changes NO_LINUX_VI to NO_DYNAMO_VI so Solaris build can use it also
    - Dropped the IOCq.cpp file, because it was empty.
+- Documentation:
+   - Rewrite of the .../README file (containing additions for the Iometer
+     User's Guide as well as text for a future Developers Guide).
 - Others:
+   - Improved error messages for better support in IOPortTCP.cpp (due to
+     the recurrent support requests).
    - Made some minor changes to get Iometer to compile with VC++ 7 (.NET)
      Note: No MSVC++ project files have been checked in, you will have to let
            VC++ convert the project for you.  This worked for fine for me.
@@ -41,8 +46,6 @@ ChangeLog (2003.nn.nn):
    - rewrote the Solaris Makefile to match the Linux stuff
    - Added the output of the major and minor number during the detection of
      the sector size (of physical disks).
-   - Rewrite of the .../README file (containing additions for the Iometer
-     User's Guide as well as text for a future Developers Guide).
 
 
 
